test/classes/vass/ref-like-intents/inout-subclass.good
inout-subclass.chpl:14: error: unresolved call 'procInoutC(unmanaged D)'
inout-subclass.chpl:6: note: this candidate did not match: procInoutC(inout arg: unmanaged C)
inout-subclass.chpl:14: note: because call actual argument #1 with type unmanaged D
inout-subclass.chpl:6: note: is passed to formal 'inout arg: unmanaged C'
